--- a/app/views/stickers/index.html.erb
+++ b/app/views/stickers/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Stickers#index</h1>
-<p>Find me in app/views/stickers/index.html.erb</p>
+<div id="map"></div>
+<script>
+
+function initMap() {
+	<% @stickers.each do |s| %>
+			var sticker<%= s.id %> = {lat: <%= s.lat %>, lng: <%= s.lon %>};
+			var marker<%= s.id%> = new google.maps.Marker({
+				position: sticker<%= s.id%>,
+				map: map,
+				<% if s.notes.empty? %>
+					title: 'Hello World!'
+				<% else %>
+					title: '<%= s.notes %>'
+				<% end %>
+});
+	<% end %>
+	var map = new google.maps.Map(document.getElementById('map'), {
+zoom: 4,
+center: "Enschede"
+});
+
+
+}
+</script>
+<script async defer
+src="https://maps.googleapis.com/maps/api/js
+	?key=AIzaSyCd7hcvDILgo-1XLUCIKwwmy8vVCNLrLK8
+	&callback=initMap">
+</script>
