--- a/app/views/stickers/personal.html.erb
+++ b/app/views/stickers/personal.html.erb
@@ -15,12 +15,12 @@
 
 <div class="flex flex-col">
   <div class="overflow-x-auto align-middle inline-block min-w-full -m-6">
-    <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-      <table class="min-w-full divide-y divide-gray-200">
-        <thead class="bg-gray-50">
+    <div class="shadow overflow-hidden border-b border-gray-200 dark:border-gray-700 sm:rounded-lg">
+      <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+        <thead class="bg-gray-50 dark:bg-gray-900">
         <tr>
           <% ["Datum", "Coördinaten", "Adres (geschat)", ""].each do |x| %>
-            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
               <%= x %>
             </th>
           <% end %>
@@ -28,14 +28,14 @@
         </thead>
         <tbody>
         <% @stickers.each do |m| %>
-          <tr class="even:bg-gray-50 odd:bg-white">
-            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+          <tr class="even:bg-gray-50 odd:bg-white w-full border-b border-gray-200 dark:border-gray-700">
+            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-gray-200">
               <%= m.created_at.strftime('%d-%m-%Y %H:%M') %>
             </td>
-            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
               <%= "#{m.lat}, #{m.lon}" %>
             </td>
-            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
               <%= m.address %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
