--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -4,30 +4,30 @@
 
 <% content_for :options do %>
   <div class="flex flex-row-reverse">
-    <%= link_to 'Nieuw recept', new_recipe_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+    <%= link_to 'Nieuw recept', new_recipe_path, class: button_classes %>
   </div>
 <% end %>
 
 <div class="flex flex-col mt-6">
   <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
     <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-      <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-        <table class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-100">
+      <div class="shadow overflow-hidden border-b border-gray-200 dark:border-gray-700 sm:rounded-lg">
+        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+          <thead class="bg-gray-100 dark:bg-black">
             <tr>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
                 Naam
               </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
                 Soort
               </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
                 Aantal x gemaakt
               </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
                 Aangemaakt op
               </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
                 Bijgewerkt op
               </th>
               <th scope="col" class="relative px-6 py-3">
@@ -35,22 +35,22 @@
               </th>
             </tr>
           </thead>
-          <tbody class="bg-white divide-y divide-gray-200">
+          <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
             <% @recipes.each do |recipe| %>
-              <tr onclick='Turbo.visit("<%= recipe_path(recipe) %>")' class="hover:bg-gray-50 cursor-pointer">
-                <td class="px-6 py-4 whitespace-nowrap">
+              <tr onclick='Turbo.visit("<%= recipe_path(recipe) %>")' class="hover:bg-gray-50 dark:hover:bg-gray-800 cursor-pointer">
+                <td class="px-6 py-4 whitespace-nowrap dark:text-gray-200">
                   <%= recipe.name %>
                 </td>
-                <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
+                <td class="px-6 py-4 whitespace-normal text-sm text-gray-500 dark:text-gray-400">
                   <%= recipe.beer %>
                 </td>
-                <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
+                <td class="px-6 py-4 whitespace-normal text-sm text-gray-500 dark:text-gray-400">
                   <%= recipe.brews.count %>
                 </td>
-                <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
+                <td class="px-6 py-4 whitespace-normal text-sm text-gray-500 dark:text-gray-400">
                   <%= recipe.created_at.strftime("%d-%m-%Y") %>
                 </td>
-                <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
+                <td class="px-6 py-4 whitespace-normal text-sm text-gray-500 dark:text-gray-400">
                   <%= recipe.updated_at.strftime("%d-%m-%Y") %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
