--- a/app/views/blogitems/index.html.erb
+++ b/app/views/blogitems/index.html.erb
@@ -10,19 +10,19 @@
   <% @items.each do |item| %>
   <div>
     <%= link_to item do %>
-      <p class="text-xl font-semibold text-gray-900">
+      <p class="text-xl font-semibold text-gray-900 dark:text-gray-200">
         <%= item.title %>
       </p>
       <p>
         <% item.tags.each do |tag| %>
           <%= link_to blog_by_tag_blogitems_path(tag.name) do %>
-            <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-xs font-medium bg-gray-100 text-gray-800">
+            <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-xs font-medium bg-gray-100 hover:bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 dark:hover:bg-gray-800">
               <%= tag.name %>
             </span>
           <% end %>
         <% end %>
       </p>
-      <p class="mt-3 text-base text-gray-500">
+      <p class="mt-3 text-base text-gray-500 dark:text-gray-400">
         <%= truncate(strip_tags(item.body.to_s), length: 150) %>
       </p>
     <% end %>
@@ -32,10 +32,10 @@
         <%= gravatar_for item.user, class: "h-10 w-10 rounded-full" %>
       </div>
       <div class="ml-3">
-        <p class="text-sm font-medium text-gray-900">
+        <p class="text-sm font-medium text-gray-900 dark:text-gray-200">
           <%= item.user.name %>
         </p>
-        <div class="flex space-x-1 text-sm text-gray-500">
+        <div class="flex space-x-1 text-sm text-gray-500 dark:text-gray-400">
           <time datetime="<%= item.created_at.strftime("%d-%m-%Y") %>">
             <%= item.created_at.strftime("%d-%m-%Y") %>
           </time>
