--- a/app/views/blogitems/_form.html.erb
+++ b/app/views/blogitems/_form.html.erb
@@ -14,20 +14,20 @@
 
     <div class="space-y-4">
       <%= f.text_field :title, class: input_classes, required: true, minlength: 2, placeholder: "Titel" %>
-      <%= f.rich_text_area :body, class: 'form-control', placeholder: "blablabla" %>
+      <%= f.rich_text_area :body, class: 'form-control dark:text-gray-200', placeholder: "blablabla" %>
       <div class="flex items-start col-span-3 md:justify-left">
         <div class="flex items-center h-5">
           <%= f.check_box :public, { checked: @item.public, class: checkbox_classes } %>
         </div>
-        <div class="ml-3 text-sm font-medium text-gray-700">
+        <div class="ml-3 text-sm font-medium text-gray-700 dark:text-gray-400">
           <%= f.label :public, "Ook voor plebs te lezen" %>
         </div>
       </div>
       <div class="mt-1 flex rounded-md shadow-sm">
-        <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm">
+        <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 text-gray-500 dark:text-gray-400 sm:text-sm">
           Tags
         </span>
-        <%= f.text_field :tags_as_string, class: "flex-1 min-w-0 block w-full px-3 py-2 rounded-none rounded-r-md focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm border-gray-300" %>
+        <%= f.text_field :tags_as_string, class: "flex-1 min-w-0 block w-full px-3 py-2 rounded-none rounded-r-md dark:bg-gray-800 focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm border-gray-300 dark:border-gray-700 dark:text-gray-200" %>
       </div>
     </div>
 
